# mit-fleet-design-optimization

./: .gitignore  .pydocstyle  Makefile  README.md  download_instances.sh  init.sh  process_results.py  pyproject.toml  pytest.ini  requirements.txt  run_all_benchmarks.txt  run_all_days.txt  run_all_instances.py
coverage/: coverage-summary.json
data/: AverageDayDemand.csv  CMT10_multi_compartment_demand.csv  CMT11_multi_compartment_demand.csv  CMT12_multi_compartment_demand.csv  CMT13_multi_compartment_demand.csv  CMT14_multi_compartment_demand.csv  CMT1_multi_compartment_demand.csv  CMT2_multi_compartment_demand.csv  CMT3_multi_compartment_demand.csv  CMT4_multi_compartment_demand.csv  CMT5_multi_compartment_demand.csv  CMT6_multi_compartment_demand.csv  CMT7_multi_compartment_demand.csv  CMT8_multi_compartment_demand.csv  CMT9_multi_compartment_demand.csv  PeakDayDemand.csv  SlowDayDemand.csv  TypicalDay2024.csv  TypicalDay2024Convert.py  TypicalDay2024_converted.csv  avg_daily_demand__2023_09.sql  consolidate_demand.py  converted_CMT1_dry.csv  export_avg_2024_demand.sql  export_avg_daily_demand.sql  export_avg_daily_demand__high_demand_day.sql  export_avg_daily_demand__low_demand_day.sql  export_avg_daily_demand__uniform_visits_per_week.sql  export_avg_day_2024_demand.sql  export_peak_day_2024_demand.sql  export_queries.py  export_slow_day_2024_demand.sql  generate_sql_from_csv.py  import.py  import2024.py  import_data.py  sales_2023_09_avg_daily_demand.csv  sales_2023_avg_daily_demand.csv  sales_2023_high_demand_day.csv  sales_2023_low_demand_day.csv  (+4 more)
docs/: conf.py  (+2 more)
(+504 files in other folders)
