[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetmix"
version = "0.0.0"
description = "Fleet Size and Mix optimizer for heterogeneous fleets of multi-compartment vehicles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
